--- a/trabalho/Estilos/Style.css
+++ b/trabalho/Estilos/Style.css
@@ -2,20 +2,25 @@
 
     background-color: bisque;
     width: 100%;
-    height: 100px;
+    height: 150px;
 }
 
 header{
     display: table-header-group;
+    justify-content: flex-end;
+    align-items: baseline;
 }
 
-#img1{
+#banner{
     transition: all 0.3s ease;
 }
 
-#img1:hover{
+#banner:hover{
 transform: translateY(-15px);
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.9);
+  box-shadow: 0px 10px 20px rgba(255, 232, 217, 0.9);
+}
+main{
+    border: 15px bisque;
 }
 
 nav{
@@ -26,7 +31,7 @@ nav{
 }
 
 footer{
-    background-color: chocolate;
+    background-color:rgba(102, 45, 7, 0.9);
     width: 100%;
-    height: 120px;
+    height: 180px;
 }
